--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ charset-normalizer==3.3.2
 cryptography==41.0.5
 defusedxml==0.8.0rc2
 Django==4.2.7
+django-cors-headers==4.3.0
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.0
 idna==3.4
 oauthlib==3.2.2
 pycparser==2.21
