--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ python3-openid==3.2.0
 pytz==2023.3.post1
 requests==2.31.0
 requests-oauthlib==1.3.1
+six==1.16.0
 social-auth-app-django==5.4.0
 social-auth-core==4.5.0
 sqlparse==0.4.4
