--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ idna==3.4
 oauthlib==3.2.2
 pycparser==2.21
 PyJWT==2.8.0
+python-dotenv==1.0.0
 python3-openid==3.2.0
 pytz==2023.3.post1
 requests==2.31.0
