--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,7 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 idna==3.4
 oauthlib==3.2.2
+psycopg2==2.9.9
 pycparser==2.21
 PyJWT==2.8.0
 python-dotenv==1.0.0
